Feat: Moved elector to electors.
- Changed the API point of electors to be more "rest-like".
- Updated Swagger to follow the new endpoints
- Updated tests to follow the new endpoints
